overlay/prometheus/grafana-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  template:
    spec:
      containers:
      - name: grafana
        volumeMounts:
        - mountPath: /grafana-dashboard-definitions/0/pvc-usage-enhanced
          name: grafana-dashboard-pvc
          subPath: pvc-usage-enhanced.json
          readOnly: false
        
      volumes:
      - name: grafana-dashboard-pvc
        configMap:
          name: grafana-dashboard-pvc-usage-enhanced
