overlay/prometheus/grafana-svc-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana    
  namespace: monitoring
  annotations:
    kube-vip.io/ignore: "true"
    metallb.io/loadBalancerIPs: 10.0.0.56
spec:
  type: LoadBalancer
