overlay/prometheus/prometheus-svc-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-k8s    
  namespace: monitoring
  annotations:
    kube-vip.io/ignore: "true"
    metallb.io/loadBalancerIPs: 10.0.0.59
spec:
  type: LoadBalancer
